syntax = "proto3";

package email;

service EmailService {
  rpc SendEmail(EmailRequest) returns (EmailResponse);
  rpc ReadEmail(ReadEmailRequest) returns (EmailResponse);
  rpc UpdateEmail(UpdateEmailRequest) returns (EmailResponse);
  rpc DeleteEmail(DeleteEmailRequest) returns (EmailResponse);
  rpc GetEmail(ReadEmailRequest) returns (EmailResponse); // Ensure this is defined
}

message EmailRequest {
  string id = 1;
  string to = 2;
  string subject = 3;
  string text = 4;
}

message EmailResponse {
  string status = 1;
  Email email = 2;
}

message ReadEmailRequest {
  string id = 1;
}

message UpdateEmailRequest {
  string id = 1;
  string to = 2;
  string subject = 3;
  string text = 4;

}

message DeleteEmailRequest {
  string id = 1;
}

message Email {
  string to = 1;
  string subject = 2;
  string text = 3;
}
